Author: Rich Harkins <rich@worldsinfinite.com>
Maintainer: Steffen Hoffmann <hoff.st@web.de>

tracforms-0.5 (yet unreleased):
 resolved issues
 * #6033: tf.who should be passed through format_author
   adding a private, optionally cached version of `env.get_known_users()`
 * #9286: Only first update of Form works, all others fail


tracforms-0.4.1 (22-Jul-2011):
 resolved issues
 * #9000: Plugin uninstallable in Trac 0.11 - sample crashes wiki, more issues
 * let intermediate permissions inherit `FORM_VIEW` for convenience


tracforms-0.4 (18-May-2011):
 resolved issues
 * #5608: trac-admin upgrade with PostgreSQL fails due to specific SQL syntax
 * #5667: Added compatibility with PostgreSQL
   both by full replacement of proprietary db cursor with generic Trac code
 * fix `filter` used for TracForms *if operations, what seems
   broken since initial implementation in 0.2

 new features
 * #5318: Unable to specify the width of input fields
   by recognizing optional attributes similar to textarea fields
 * arbitrary floating point precision support for aggregation functions
   by an algorithm independent of native support in Python >= 2.6
 * support for negative values as arguments of aggregation functions


tracforms-0.3.1 (09-May-2011):
 resolved issues
 * #8751: Form update failure: HTTP request has not JSON serializable argument
 * fix last_id property of 'INSERT' SQL statement for new forms
 * fix handling of HTML 'POST' request argument `__context__`


tracforms-0.3 (30-Apr-2011):
 resolved issues
 * #3388: Couldn't print TracForms
 * #6993: Form Submission returns 'RuntimeError: No Content-Length header set'
   fixing HTTP request handling in Trac >= 0.12
 * fix error "'DBCursor' object has no attribute 'lastrowid'"
 * #3741: Tracforms can't handle mutated vowel
   allowing non-ASCII characters in user input and for submit button label

 new features
 * #3500: Integrate search with TracFormsPlugin
   by an own TracSearch provider (ISearchSource)